# GPU_Renderer

./: CMakeLists copy.txt  CMakeLists.txt  LICENSE  README_HW3.md  rewrite_h.md
include/: BVH_node.h  CUDA_rand.h  Hit_Record.h  Scene.h  all_utils.h  compute_normals.h  compute_radiance.h  helper.h  image.h  material.h  matrix.h  parse_obj.h  parse_ply.h  parse_scene.h  parse_serialized.h  pcg.h  progressreporter.h  ray.h  timer.h  transform.h  utils.h  vector.h
src/: BVH_node.cu  CUDA_rand.cu  Scene.cu  compute_radiance.cu  helper.cu  hw4.cu  image.cpp  material.cu  parse_ply.cpp  parse_scene.cpp
